# Qt-QrCodeGenerator

./: .gitignore  CMakeLists.txt
